fixes image clipping

--- a/portfolio-site/styles/Header.module.scss
+++ b/portfolio-site/styles/Header.module.scss
@@ -104,7 +104,7 @@
 
 .app__header-img {
   //flex: 1;
-  height: 100%;
+  // height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -126,9 +126,10 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 70%;
-    }
-    @media screen and (max-width: 785px) {
       margin-top: 1rem;
+    }
+    @media screen and (max-width: 650px) {
+      margin-top: 2rem;
     }
   }
 
